# SSH-Connect

./: .gitignore  Cargo.toml  LICENSE  README.md  hosts.example.toml
.claude/agents/: deployment-runner.md  fleet-health-reporter.md  switch-config-auditor.md  vps-health-reporter.md  vps-troubleshooter.md
.github/workflows/: ci.yml  release.yml
skills/health-report/: SKILL.md  rubric.md  template.html
skills/switch-management/: SKILL.md
skills/switch-management/references/: arista-eos.md  cisco-ios-iosxe.md  cisco-nxos.md  juniper-junos.md  log-signatures.md
skills/vps-health-report/: SKILL.md  rubric.md  template.html
skills/vps-management/: SKILL.md
src/: broker.rs  config.rs  error.rs  main.rs  server.rs  state.rs
src/discovery/: mod.rs  ports.rs
src/tools/: database_tools.rs  extras_tools.rs  file_tools.rs  health_tools.rs  interactive_tools.rs  mod.rs  service_tools.rs  session_tools.rs  ssh_tools.rs  switch_tools.rs  system_tools.rs  ubuntu_tools.rs  util.rs
src/transport/: manager.rs  mod.rs  serial.rs  ssh.rs  telnet.rs
